--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ a:hover {
 }
 
 p {
-    font-size: 1.3rem;
+    font-size: 1rem;
 }
 
 img {
@@ -80,7 +80,7 @@ li {
 
 #header h1 a {
     color: hotpink;
-    font-size: 3rem;
+    font-size: 1.5rem;
     transition: all 1s;
 }
 
@@ -114,7 +114,7 @@ li {
 }
 
 #header li {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     margin-left: 60px;
     color: hotpink;
 }
@@ -123,7 +123,7 @@ li {
     color: hotpink;
     transition: all 1s;
     margin-right: 20px;
-    font-size: 1.3rem;
+    font-size: 1rem;
 }
 
 #header li a:last-child {
@@ -251,7 +251,7 @@ li {
     border-radius: 20px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
     .site-title {
         margin-top: 20px;
     }
@@ -265,7 +265,7 @@ li {
     }
 
     #header li {
-        font-size: 0.8rem;
+        font-size: 0.5rem;
         margin-left: 20px;
     }
 
@@ -299,5 +299,16 @@ li {
 
     #contact dd {
         width: 100px;
+    }
+
+    p {
+        font-size: 0.8rem;
+    }
+
+    #contact input[type="text"],
+    #contact input[type="email"],
+    #contact textarea {
+        width: 100%;
+        box-sizing: border-box;
     }
 }
