--- a/style.css
+++ b/style.css
@@ -182,6 +182,10 @@ li {
     opacity: 0.7;
 }
 
+/* #works {
+    margin-bottom: 100px;
+} */
+
 #news dl {
     display: flex;
     flex-wrap: wrap;
@@ -249,6 +253,74 @@ li {
     background-color: hotpink;
     color: black;
     border-radius: 20px;
+}
+
+.portofolio {
+    width: 100%;
+    padding: 100px 0;
+}
+
+.title h2 {
+    color: hotpink;
+    font-size: 75px;
+    margin: 30px auto;
+    text-align: center;
+    font-size: 1.3rem;
+}
+
+.box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 400px;
+    margin-bottom: 20px;
+}
+
+.card {
+    height: 390px;
+    width: 365px;
+    background-color: #191919;
+    padding: 20px 35px;
+    margin: 20px;
+    border-radius: 20px;
+    overflow: hidden;
+    text-align: center;
+    font-size: 1rem;
+    color: hotpink;
+}
+
+.card i {
+    color: lightseagreen;
+    font-size: 50px;
+    margin: 25px 0;
+}
+
+h5 {
+    color: hotpink;
+    font-size: 1rem;
+    margin-bottom: 30px;
+}
+
+.paragraph p {
+    color: hotpink;
+    font-size: 1rem;
+    line-height: 25px;
+    margin-bottom: 30px;
+}
+
+.card .button {
+    background-color: lightseagreen;
+    padding: 13px 30px;
+    color: white;
+    font-weight: bold;
+    border-radius: 30px;
+    transition: all 0.3s;
+}
+
+.card .button:hover {
+    background-color: transparent;
+    border: 2px solid green;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 500px) {
