--- a/blog/blog-app/src/components/style.css
+++ b/blog/blog-app/src/components/style.css
@@ -134,8 +134,8 @@ li {
 }
 
 /* #header li a:hover {
-    /* opacity: 0.5; */
-/* } */
+    opacity: 0.5;
+} */
 
 */ #header li img.icon {
     width: 30px;
