--- a/blog/blog-app/src/App.css
+++ b/blog/blog-app/src/App.css
@@ -1,9 +1,31 @@
-.App {
-  text-align: center;
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
 }
 
-.App-header {
-  background-color: #240c8f;
-  padding: 20px;
+.App {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.header {
+  background-color: #50b3a2;
   color: white;
+  padding: 20px 0;
+}
+
+.button {
+  background-color: #50b3a2;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #338a70;
 }
