--- a/blog/blog-app/src/App.css
+++ b/blog/blog-app/src/App.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: lightseagreen;
+  /* background-color: lightseagreen; */
 }
 
 .App {
@@ -45,6 +45,7 @@ body {
   margin-bottom: 20px;
   color: #333;
   text-align: center;
+  background-color: rgba(245, 245, 245, 0.7);
 }
 
 /* ブログ投稿カードのスタイル */
@@ -54,17 +55,20 @@ body {
   border-radius: 5px;
   margin-bottom: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+  background-color: rgba(245, 245, 245, 0.7);
 }
 
 .card h2 {
   font-size: 1.5rem;
   margin-bottom: 10px;
   color: #444;
+  background-color: rgba(245, 245, 245, 0.7);
 }
 
 .card p {
   font-size: 1rem;
   color: #666;
+  background-color: rgba(245, 245, 245, 0.7);
 }
 
 /* 投稿フォームのスタイル */
@@ -82,6 +86,7 @@ form label {
   font-size: 1rem;
   margin-bottom: 5px;
   color: #555;
+  background-color: rgba(245, 245, 245, 0.7);
 }
 
 form input[type="text"],
@@ -93,11 +98,13 @@ form textarea {
   border-radius: 5px;
   font-size: 1rem;
   box-sizing: border-box;
+  background-color: rgba(245, 245, 245, 0.7);
 }
 
 form textarea {
   height: 150px;
   /* テキストエリアの高さを変更 */
+  background-color: rgba(245, 245, 245, 0.7);
 }
 
 form button {
