--- a/blog/blog-app/src/App.css
+++ b/blog/blog-app/src/App.css
@@ -1,5 +1,10 @@
 body {
+  font-family: 'Inconsolata', monospace;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto Mono', monospace;
   margin: 0;
   padding: 0;
   /* background-color: lightseagreen; */
