--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -2,4 +2,77 @@ body {
     background-color: #333333;
     color: white;
     font-family: Consolas, 'Courier New', Courier, Monaco, monospace;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.loader {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.loader h2 {
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 700;
+}
+
+.loader span {
+    position: absolute;
+    border: 2px solid #fff;
+    width: 100%;
+    height: 100%;
+    animation: animate 5s linear infinite;
+}
+
+.loader span:nth-child(1) {
+    border-radius: 86% 14% 55% 45% / 25% 68% 32% 75%;
+}
+
+.loader span:nth-child(2) {
+    animation-direction: reverse;
+    border-radius: 32% 68% 11% 89% / 63% 32% 68% 37%;
+}
+
+.loader span:nth-child(3) {
+    animation-duration: 3s;
+    border-radius: 43% 57% 55% 45% / 82% 60% 40% 18%;
+}
+
+.loaded {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 1s;
+}
+
+.content {
+    visibility: hidden;
+    position: absolute;
+    color: white;
+    font-size: 1.5rem;
+    transition: all 1s;
+    transition-delay: 1s;
+}
+
+@keyframes animate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
