--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -25,14 +25,14 @@ body {
 }
 
 .loader h2 {
-    color: rgb(3, 82, 51);
+    color: white;
     font-size: 1.3rem;
     font-weight: 700;
 }
 
 .loader span {
     position: absolute;
-    border: 2px solid #fff;
+    border: 2px solid #023f30;
     width: 100%;
     height: 100%;
     animation: animate 5s linear infinite;
