--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -32,7 +32,7 @@ body {
 
 .loader span {
     position: absolute;
-    border: 2px solid #023f30;
+    border: 2px solid #f3f706;
     width: 100%;
     height: 100%;
     animation: animate 5s linear infinite;
