--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -67,6 +67,38 @@ body {
     transition-delay: 3s;
 }
 
+.image-generation-form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+textarea {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #f3f706;
+    background-color: #444;
+    color: white;
+    resize: vertical;
+    width: 80%;
+    max-width: 500px;
+}
+
+button {
+    margin-top: 15px;
+    padding: 10px 20px;
+    border: none;
+    border-color: #f3f706;
+    color: #333;
+    cursor: pointer;
+    transition: background-color 1s;
+}
+
+button:hover {
+    background-color: #e4e002;
+}
+
 @keyframes animate {
     0% {
         transform: rotate(0deg);
