--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -72,6 +72,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 textarea {
@@ -92,7 +94,7 @@ button {
     border-color: #f3f706;
     color: #333;
     cursor: pointer;
-    transition: background-color 1s;
+    transition: background-color 1s, border-radius 1s;
 }
 
 button:hover {
