--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -102,6 +102,10 @@ button:hover {
     border-radius: 15px;
 }
 
+h3 a {
+    color: white;
+}
+
 @keyframes animate {
     0% {
         transform: rotate(0deg);
