--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -107,7 +107,8 @@ h5 a {
     text-decoration: none;
     transition: all 1s;
     font-size: 0.7rem;
-    margin-top: 1px;
+    margin-top: 5px;
+    margin-bottom: 30px;
 }
 
 h5 a:hover {
