--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -65,6 +65,11 @@ body {
     font-size: 1.5rem;
     transition: all 5s;
     transition-delay: 3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: auto;
 }
 
 .image-generation-form {
