--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -60,7 +60,7 @@ body {
 
 .content {
     visibility: hidden;
-    position: absolute;
+    /* position: absolute; */
     color: white;
     font-size: 1.5rem;
     transition: all 5s;
@@ -70,6 +70,8 @@ body {
     align-items: center;
     width: 100%;
     height: auto;
+    justify-content: center;
+    margin-top: 5%;
 }
 
 .image-generation-form {
@@ -77,7 +79,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     height: 100vh;
 }
 
