--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -68,15 +68,15 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 100vh;
     justify-content: center;
+    padding: 20px 0;
 }
 
 .image-generation-form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: auto;
+    width: 100%;
 }
 
 textarea {
@@ -122,7 +122,8 @@ h5 a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: auto;
+    padding: 20px 0;
 }
 
 .generated-image-container img {
