--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -29,6 +29,10 @@ body {
     color: white;
     font-size: 1.3rem;
     font-weight: 700;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .loader span {
