--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -22,7 +22,6 @@ body {
     align-items: center;
     justify-content: center;
     position: relative;
-    flex-direction: column;
 }
 
 .loader h2 {
@@ -41,6 +40,9 @@ body {
     width: 100%;
     height: 100%;
     animation: animate 5s linear infinite;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .loader span:nth-child(1) {
