--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -20,9 +20,10 @@ body {
     height: 300px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     position: relative;
     flex-direction: column;
+    padding: 20px 0;
 }
 
 .loader h2 {
@@ -30,17 +31,14 @@ body {
     font-size: 1.3rem;
     font-weight: 700;
     z-index: 10;
+    position: relative;
 }
 
 .loader span {
-    position: absolute;
     border: 2px solid #f3f706;
     width: 100%;
     height: 100%;
     animation: animate 5s linear infinite;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .loader span:nth-child(1) {
