--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -20,10 +20,9 @@ body {
     height: 300px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     position: relative;
     flex-direction: column;
-    padding: 20px 0;
 }
 
 .loader h2 {
@@ -31,14 +30,21 @@ body {
     font-size: 1.3rem;
     font-weight: 700;
     z-index: 10;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .loader span {
+    position: absolute;
     border: 2px solid #f3f706;
     width: 100%;
     height: 100%;
     animation: animate 5s linear infinite;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .loader span:nth-child(1) {
