--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -16,8 +16,8 @@ body {
 }
 
 .loader {
-    width: 100vw;
-    height: 100vh;
+    width: 300px;
+    height: 300px;
     display: flex;
     align-items: center;
     justify-content: center;
