--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -23,6 +23,7 @@ body {
     justify-content: center;
     position: relative;
     flex-direction: column;
+    padding: 50px;
 }
 
 .loader h2 {
@@ -35,6 +36,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0;
+    white-space: nowrap;
 }
 
 .loader span {
@@ -46,6 +48,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: calc(100% - 100px);
+    height: calc(100% - 100px);
 }
 
 .loader span:nth-child(1) {
