--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -18,9 +18,6 @@ body {
 .loader {
     width: 300px;
     height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: relative;
 }
 
@@ -35,17 +32,19 @@ body {
     transform: translate(-50%, -50%);
     margin: 0;
     white-space: nowrap;
+    padding: 0;
 }
 
 .loader span {
     position: absolute;
     border: 2px solid #f3f706;
     animation: animate 5s linear infinite;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: calc(100% - 40px);
-    height: calc(100% - 40px);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    border-radius: 50%;
 }
 
 .loader span:nth-child(1) {
