--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -68,6 +68,11 @@ body {
 }
 
 .content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    visibility: hidden;
     color: white;
     font-size: 1.5rem;
     transition: all 5s;
@@ -79,7 +84,6 @@ body {
     max-width: 1000px;
     justify-content: center;
     padding: 20px 0;
-    margin-top: 5%;
 }
 
 .image-generation-form {
@@ -87,7 +91,6 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin-bottom: 30px;
 }
 
 textarea {
@@ -130,17 +133,16 @@ h5 a:hover {
 }
 
 .generated-image-container {
-    width: 100%;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    height: auto;
     padding: 20px 0;
 }
 
 .generated-image-container img {
-    width: calc(50% - 20px);
-    margin: 10px;
+    max-width: 80%;
+    height: auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
