--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 * {
@@ -19,6 +20,14 @@ body {
     width: 300px;
     height: 300px;
     position: relative;
+    display: flex;
+    /* 追加 */
+    align-items: center;
+    /* 追加 */
+    justify-content: center;
+    /* 追加 */
+    margin: 0 auto;
+    /* 追加 */
 }
 
 .loader h2 {
