--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -5,14 +5,13 @@ body {
     height: 100vh;
     width: 100%;
     display: flex;
-    align-items: flex-start;
-    /* centerから変更 */
+    align-items: center;
+    /* Updated this line to center items vertically */
     justify-content: center;
     flex-direction: column;
     overflow: auto;
     position: relative;
     padding-top: 5%;
-    /* 上部の空間を作るために追加 */
 }
 
 * {
