--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -1,3 +1,8 @@
+html,
+body {
+    height: 100%;
+}
+
 body {
     background-color: #333333;
     color: white;
@@ -10,7 +15,7 @@ body {
     flex-direction: column;
     overflow: auto;
     position: relative;
-    padding-top: 5%;
+    padding-top: 0;
 }
 
 * {
@@ -154,6 +159,8 @@ h5 a:hover {
     gap: 20px;
     padding: 20px 0;
     margin-top: 20px;
+    max-height: 50vh;
+    overflow-y: auto;
 }
 
 .generated-images-container img {
