--- a/sd/stablediffusion.css
+++ b/sd/stablediffusion.css
@@ -41,10 +41,10 @@ body {
     font-size: 1.3rem;
     font-weight: 700;
     z-index: 10;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
     margin: 0;
     white-space: nowrap;
     padding: 0;
