--- a/cattoon/cartoon.css
+++ b/cattoon/cartoon.css
@@ -1,4 +1,4 @@
-* {
+html {
     font-family: 'Inconsolata', monospace;
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-family: 'Poppins', sans-serif;
@@ -6,11 +6,11 @@
     font-family: 'Roboto', sans-serif;
     font-family: 'Roboto Condensed', sans-serif;
     font-family: 'Roboto Mono', monospace;
+    background-color: black;
+    color: white;
 }
 
 body h1 {
-    background-color: black;
-    color: white;
     align-items: center;
     justify-content: center;
 }
