--- a/cattoon/cartoon.css
+++ b/cattoon/cartoon.css
@@ -1,5 +1,13 @@
 html {
     font-family: 'Roboto Mono', monospace;
+    font-family: 'Inconsolata', monospace;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     background-color: black;
     color: white;
 }
@@ -30,6 +38,9 @@ body h1 {
     max-height: 100%;
     display: block;
     margin: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 img {
