--- a/cattoon/cartoon.css
+++ b/cattoon/cartoon.css
@@ -32,7 +32,7 @@ body h1 {
     padding: 20px;
 }
 
-#ledtSide img,
+#leftSide img,
 #rightSide img {
     max-width: 100%;
     max-height: 100%;
@@ -44,8 +44,8 @@ body h1 {
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+    display: block;
+    margin: auto;
 }
 
 a {
