--- a/cattoon/cartoon.css
+++ b/cattoon/cartoon.css
@@ -26,20 +26,19 @@ body h1 {
 #leftSide,
 #rightSide {
     width: 48%;
-    height: 400px;
+    max-height: 400px;
     border: 1px solid #ddd;
     text-align: center;
     padding: 20px;
+    overflow: hidden;
 }
 
 #leftSide img,
 #rightSide img {
-    max-width: 100%;
+    width: auto;
     max-height: 100%;
     display: block;
     margin: auto;
-    width: 100%;
-    height: 100%;
     object-fit: contain;
 }
 
