--- a/style.css
+++ b/style.css
@@ -327,6 +327,70 @@ h5 {
     cursor: pointer;
 }
 
+.hamburger-menu {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.hamburger-menu div {
+    height: 3px;
+    width: 30px;
+    background-color: white;
+    margin: 2px 0;
+    transition: all 1.5s;
+}
+
+.hamburger-menu.active div:nth-child(1) {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.hamburger-menu.active div:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger-menu.active div:nth-child(3) {
+    transform: rotate(45deg) translate(-5px, -6px);
+}
+
+.nav-menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    height: 100%;
+    width: 250px;
+    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 60px;
+    transition: all 1.5s;
+}
+
+.nav-menu.active {
+    right: 0;
+}
+
+.nav-menu a {
+    padding: 10px;
+    font-size: 1.5rem;
+    text-decoration: none;
+    color: white;
+    transition: all 1.5s;
+}
+
+.nav-menu a:hover {
+    color: hotpink;
+}
+
+nav {
+    display: none;
+}
+
+nav.is-active {
+    display: block;
+}
+
 @media screen and (max-width: 375px) {
 
     #contact dd input,
@@ -433,5 +497,17 @@ h5 {
 
     section.wrapper table {
         font-size: 0.7rem;
+    }
+
+    .hamburger-menu {
+        display: flex;
+    }
+
+    .nav-menu {
+        display: none;
+    }
+
+    .nav-menu.active {
+        display: flex;
     }
 }
