--- a/style.css
+++ b/style.css
@@ -391,6 +391,15 @@ nav.is-active {
     display: block;
 }
 
+.bar {
+    display: block;
+    height: 3px;
+    width: 30px;
+    background-color: white;
+    margin: 2px 0;
+    transition: all 1.5s;
+}
+
 @media screen and (max-width: 375px) {
 
     #contact dd input,
