--- a/style.css
+++ b/style.css
@@ -385,6 +385,17 @@ h5 {
 
 nav {
     display: none;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    height: 100%;
+    width: 250px;
+    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 60px;
+    transition: all 1.5s;
 }
 
 nav.is-active {
