--- a/style.css
+++ b/style.css
@@ -338,23 +338,26 @@ h5 {
     width: 30px;
     background-color: white;
     margin: 2px 0;
-    transition: all 1.5s;
+    transition: all 0.3s;
 }
 
 .hamburger-menu.active div:nth-child(1) {
     transform: rotate(-45deg) translate(-5px, 6px);
+    transition: all 0.3s;
 }
 
 .hamburger-menu.active div:nth-child(2) {
     opacity: 0;
+    transition: all 0.1s;
 }
 
 .hamburger-menu.active div:nth-child(3) {
     transform: rotate(45deg) translate(-5px, -6px);
+    transition: all 0.3s;
 }
 
 .nav-menu {
-    display: none;
+    display: flex;
     position: fixed;
     top: 0;
     right: -100%;
@@ -362,9 +365,10 @@ h5 {
     width: 250px;
     background-color: #333;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     padding-top: 60px;
     transition: all 1.5s;
+    padding-left: 20px;
 }
 
 .nav-menu.active {
@@ -373,11 +377,12 @@ h5 {
 }
 
 .nav-menu a {
-    padding: 10px;
-    font-size: 1.5rem;
+    padding: 5px 0;
+    font-size: 1.2rem;
     text-decoration: none;
     color: white;
     transition: all 1.5s;
+    border-bottom: 1px solid #444;
 }
 
 .nav-menu a:hover {
