--- a/style.css
+++ b/style.css
@@ -332,6 +332,10 @@ h5 {
     flex-direction: column;
     cursor: pointer;
     z-index: 10;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
 }
 
 .hamburger-menu .bar {
@@ -339,7 +343,8 @@ h5 {
     width: 30px;
     background-color: white;
     margin: 2px 0;
-    transition: all 0.3s;
+    transition: all 0.3s ease-in-out;
+    transform-origin: center;
 }
 
 .hamburger-menu.active div:nth-child(1) {
@@ -358,15 +363,16 @@ h5 {
 }
 
 .hamburger-menu.active .bar:nth-child(1) {
-    transform: rotate(-45deg) translate(-5px, 6px);
+    transform: rotate(45deg);
 }
 
 .hamburger-menu.active .bar:nth-child(2) {
     opacity: 0;
+    transform: scale(0);
 }
 
 .hamburger-menu.active .bar:nth-child(3) {
-    transform: rotate(45deg) translate(-5px, -6px);
+    transform: rotate(-45deg);
 }
 
 .nav-menu {
