--- a/style.css
+++ b/style.css
@@ -363,16 +363,18 @@ h5 {
 }
 
 .hamburger-menu.active .bar:nth-child(1) {
-    transform: rotate(45deg);
+    transform: rotate(45deg) translate(0, -1px);
+    transition: all 0.3s;
 }
 
 .hamburger-menu.active .bar:nth-child(2) {
     opacity: 0;
-    transform: scale(0);
+    transition: all 0.1s;
 }
 
 .hamburger-menu.active .bar:nth-child(3) {
-    transform: rotate(-45deg);
+    transform: rotate(-45deg) translate(0, 1px);
+    transition: all 0.3s;
 }
 
 .nav-menu {
