--- a/style.css
+++ b/style.css
@@ -378,7 +378,7 @@ h5 {
     position: fixed;
     top: 0;
     right: -100%;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     background-color: #333;
     flex-direction: column;
@@ -387,14 +387,19 @@ h5 {
     padding-top: 60px;
     transition: all 0.3s;
     z-index: 1;
+    display: flex;
 }
 
 .nav-menu ul {
     padding: 0;
+    text-align: center;
+    width: 100%;
 }
 
 .nav-menu li {
     margin-bottom: 10px;
+    text-align: left;
+    display: inline-block;
 }
 
 .nav-menu.active {
