--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ li {
     max-width: 960px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     margin: 0 auto;
     padding: 0 4%;
     height: 170px;
@@ -385,7 +385,7 @@ h5 {
     align-items: center;
     justify-content: center;
     padding-top: 60px;
-    transition: all 0.3s;
+    transition: all 1s;
     z-index: 1;
     display: flex;
 }
@@ -434,6 +434,24 @@ nav.is-active {
     background-color: white;
     margin: 2px 0;
     transition: all 1.5s;
+}
+
+.scroll-top-button {
+    display: none;
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    padding: 1rem 1.5rem;
+    background-color: #333;
+    color: #fff;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1000;
+    transition: opacity 1s ease-out;
+}
+
+.scroll-top-button:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 375px) {
