--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ h5 {
     right: -100%;
     height: 100%;
     width: 100vw;
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0.7);
     flex-direction: column;
     align-items: center;
     justify-content: center;
