--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -1,3 +1,31 @@
+@keyframes borderAnimation {
+  0% {
+    border-color: hsl(240, 100%, 50%);
+  }
+
+  /* 青 */
+  25% {
+    border-color: hsl(300, 100%, 50%);
+  }
+
+  /* マゼンタ */
+  50% {
+    border-color: hsl(0, 100%, 50%);
+  }
+
+  /* 赤 */
+  75% {
+    border-color: hsl(60, 100%, 50%);
+  }
+
+  /* 黄色 */
+  100% {
+    border-color: hsl(120, 100%, 50%);
+  }
+
+  /* 緑 */
+}
+
 .App {
   text-align: center;
   background-color: #333;
@@ -7,10 +35,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 2% 0;
 }
 
 body {
   font-family: Consolas, monospace;
+  margin: 0;
 }
 
 :lang(ja) {
@@ -18,18 +48,17 @@ body {
 }
 
 .video-container {
-  position: relative;
   width: 80%;
   max-width: 720px;
-  padding-top: 45%;
+  border: 4px solid #ff4500;
+  animation: borderAnimation 5s infinite;
+  border-radius: 8px;
 }
 
 .video-container video {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
+  border-radius: 8px;
 }
 
 .interaction-container {
@@ -43,16 +72,16 @@ body {
 
 .interaction-container input {
   width: 100%;
-  padding: 15px;
-  font-size: 16px;
+  padding: 20px;
+  font-size: 18px;
   border-radius: 4px;
   border: none;
   margin-bottom: 10px;
 }
 
 .interaction-container button {
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 15px 25px;
+  font-size: 18px;
   background-color: orange;
   color: white;
   border: none;
@@ -68,7 +97,7 @@ body {
   width: 80%;
   max-width: 720px;
   margin-top: 20px;
-  padding: 20px;
+  padding: 30px;
   border: 1px solid #ccc;
   border-radius: 4px;
   background-color: #444;
