--- a/alien/ask-alien/src/App.css
+++ b/alien/ask-alien/src/App.css
@@ -34,8 +34,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 2% 0;
+  justify-content: flex-start;
+  padding: 20px;
 }
 
 body {
@@ -53,6 +53,8 @@ body {
   border: 4px solid #ff4500;
   animation: borderAnimation 5s infinite;
   border-radius: 8px;
+  width: 100%;
+  padding-top: 56.25%;
 }
 
 .video-container video {
@@ -62,7 +64,7 @@ body {
 }
 
 .interaction-container {
-  width: 80%;
+  width: 100%;
   max-width: 720px;
   margin-top: 20px;
   display: flex;
